--- a/templates/main.html
+++ b/templates/main.html
@@ -123,8 +123,8 @@
 			</div>
 		</div>
 		<footer style="text-align: center; background-color: #d6dadd;">
-			<p>Rüzgar Tutku Başbay, 2024</p>
-			<p>X-ray Güvenlik Kontrollerinde YOLOv5 ile Gerçek Zamanlı Nesne Tespiti</p>
+			<p>Avni Egemen Uzun, 2024</p>
+			<p>X-ray Güvenlik Kontrollerinde YOLOv8 ile Gerçek Zamanlı Nesne Tespiti</p>
 		</footer>
 		<script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
